Inception 1.0.1
================================================================================
+ Now a native Joomla 4 plugin with forwards compatibility to Joomla 5
+ Allow ShowOn in inception fields
+ Allow custom backend (edit) layout

Inception 1.0.0
================================================================================
+ Initial release